# fgr

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: main.yml
src/: config.rs  errors.rs  macro.rs  main.rs  run.rs  test_utils.rs
src/evaluate/: comparison_impl.rs  execution_manager.rs  expression_node_impl.rs  filter_impl.rs  mod.rs  nnf.rs  traits.rs  tseitin.rs
src/parse/: ast_node.rs  attribute_token.rs  comparison.rs  expression_node.rs  file_type.rs  filter.rs  match_pattern.rs  mod.rs  primitives.rs  render.rs  size_unit.rs  time_unit.rs  traits.rs  util.rs
src/walk/: entry_type.rs  mod.rs  traits.rs
