[package]
name = "fgr"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7"
thiserror = "1"
strum = "0.24"
strum_macros = "0.24"
lazy_static = "1.4"
chrono = "0.4"
itertools = "0.10"
dot-writer = "0.1.2"
ignore = "0.4"
regex = "1"
globset = "0.4"
kanal = { git = "https://github.com/fereidani/kanal" }
num_cpus = "1.13"
ctrlc = "3.2"
clap = { version = "4.0.16", features = ["derive", "color", "suggestions"] }
users = "0.11"
unix_mode = "0.1"
infer = "0.11.0"
timeout-readwrite = "0.3"
#splr = { version = "0.16", features = ["incremental_solver"] }
bitvec = "1"
nnf = { git = "https://github.com/night-crawler/nnf", branch = "main", version = "0.1" }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
